--- a/style.css
+++ b/style.css
@@ -26,22 +26,29 @@ html {
     position: relative;
     top: -1px;
     vertical-align: top;
+    display: flex;
+    flex-direction: column;
 }
 
 #upper-display {
-    height: 33%;
+    height: 100px;
     width: 96%;
-    margin-left: auto;
-    margin-right: auto;
-    /* padding-top: 5px; */
+    margin-left: 15px;
+    font-size: 24px;
     background-color: rgb(85, 84, 84);
     color: black;
+    margin-top: 30px;
+
 }
 
 #lower-display {
-    height: 66%;
+    height: 100px;
     background-color: rgb(85, 84, 84);
     color: black;
+    text-align: right;
+    font-size: 32px;
+    margin-top: 65px;
+    margin-right: 30px;
 }
 
 .calc-buttons {
@@ -102,6 +109,5 @@ button:active {
         color: black;
         outline: 1px solid transparent;
         background: grey;
-        /* outline-offset: -4px; */
     }
 }
