--- a/style.css
+++ b/style.css
@@ -20,35 +20,17 @@ html {
 
 .display {
     width: 100%;
-    height: 200px;
+    height: 96px;
     border: none;
     background-color: rgb(85, 84, 84);
     position: relative;
     top: -1px;
     vertical-align: top;
     display: flex;
-    flex-direction: column;
-}
-
-#upper-display {
-    height: 100px;
-    width: 96%;
-    margin-left: 15px;
-    font-size: 24px;
-    background-color: rgb(85, 84, 84);
-    color: black;
-    margin-top: 30px;
-
-}
-
-#lower-display {
-    height: 100px;
-    background-color: rgb(85, 84, 84);
-    color: black;
-    text-align: right;
-    font-size: 32px;
-    margin-top: 65px;
-    margin-right: 30px;
+    flex-direction: row-reverse;
+    align-items: center;
+    font-size: 70px;
+    margin-right: 20px;
 }
 
 .calc-buttons {
@@ -110,4 +92,9 @@ button:active {
         outline: 1px solid transparent;
         background: grey;
     }
+}
+
+.selected {
+    background-color: rgb(58, 58, 58);
+    border: 1px solid black;
 }
